<resources>
    <string name="app_name">Restaurant 1.0</string>
    <string name="title_activity_test1">Sign in</string>

    <string name="prompt_name">Nombre</string>
    <string name="prompt_nit">Nit</string>
    <string name="prompt_property">Propietari@</string>
    <string name="prompt_street">Calle</string>

    <!-- Strings related to login -->

    <string name="action_login">Login</string>
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Contraseña</string>

    <string name="action_save_in">Guardar Datos</string>
    <string name="action_save_in_short">Guardar</string>

    <string name="error_invalid_name">El nombre no es valido</string>
    <string name="error_invalid_nit">El nit no es valido</string>

    <string name="error_incorrect_password">El password es incorrecto</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="title_activity_login">Login</string>

</resources>
